--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -364,7 +364,7 @@
                 </h5>
               </div>
               <div class="card-body">
-                <textarea class="form-control" rows="3" id="automation"></textarea>
+                <textarea class="form-control" rows="3" id="automation" type="text"></textarea>
               </div>
             </div>
           </div>
@@ -491,14 +491,14 @@
 Number of Contracts in Ranks
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="contractsNo">
+       <input class="form-control" id="contractsNo" type="text">
     </div>
 </div>
 <div class="row ">
     <div class="col-5 border pt-3">
 Type or size of the vessels served    </div>
     <div class="col border p-2">
-       <input class="form-control" id="vesselServed">
+       <input class="form-control" id="vesselServed" type="text">
     </div>
 </div>
 <div class="row ">
@@ -506,7 +506,7 @@ Type or size of the vessels served    </div>
 Last contract sign off date
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="lastContract">
+       <input class="form-control" id="lastContract" type="text">
     </div>
 </div>
 <div class="row ">
@@ -514,7 +514,7 @@ Last contract sign off date
 Type of main engine exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="mainExp">
+       <input class="form-control" id="mainExp" type="text">
     </div>
 </div>
 <div class="row ">
@@ -522,7 +522,7 @@ Type of main engine exp.
 Type of AUX engine exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="auxExp">
+       <input class="form-control" id="auxExp" type="text">
     </div>
 </div>
 <div class="row ">
@@ -530,7 +530,7 @@ Type of AUX engine exp.
 Cargo cranes/gear (marker) exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="cargoCranes">
+       <input class="form-control" id="cargoCranes" type="text">
     </div>
 </div>
 <div class="row ">
@@ -538,7 +538,7 @@ Cargo cranes/gear (marker) exp.
 Type of Cargo carried
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="cargoCarried">
+       <input class="form-control" id="cargoCarried" type="text">
     </div>
 </div>
 <div class="row ">
@@ -546,7 +546,7 @@ Type of Cargo carried
 Type of Cargo pumps(tankers)
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="cargoPumps">
+       <input class="form-control" id="cargoPumps" type="text">
     </div>
 </div>
 <div class="row ">
@@ -554,7 +554,7 @@ Type of Cargo pumps(tankers)
 Trading Area(limited/WW)
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="tradingArea">
+       <input class="form-control" id="tradingArea" type="text">
     </div>
 </div>
 <div class="row ">
@@ -562,7 +562,7 @@ Trading Area(limited/WW)
 Mixed crew (nationalities) exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="mixedCrew">
+       <input class="form-control" id="mixedCrew" type="text">
     </div>
 </div>
 <div class="row ">
@@ -570,7 +570,7 @@ Mixed crew (nationalities) exp.
 ECDIS experience in previous 12 months
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="ecdis">
+       <input class="form-control" id="ecdis" type="text">
     </div>
 </div>
 <div class="row ">
@@ -578,7 +578,7 @@ ECDIS experience in previous 12 months
 PSC experience
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="psc">
+       <input class="form-control" id="psc" type="text">
     </div>
 </div>
 <div class="row ">
@@ -586,7 +586,7 @@ PSC experience
 SIRE/CID experience
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="sire">
+       <input class="form-control" id="sire" type="text">
     </div>
 </div>
   </div>
