--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -920,14 +920,15 @@ SIRE/CID experience
       </div>
     </div>
     <div>
-      <div id="submitWarning" class="alert alert-warning alert-dismissible fade show no-print mt-3" role="alert">
-          <strong>Kindly double-check before submitting!</strong> Once submitted, the form cannot be edited again.
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      <button id="write" class="btn btn-success no-print" >Submit Evaluation for Candidate</button>
-      <button type="button" class="btn btn-primary no-print mt-4 mb-4" style="visibility: hidden;" onclick="printDiv('printableArea')">Print Form</button>
+        <div id="submitWarning" class="alert alert-warning alert-dismissible fade show no-print mt-3" role="alert">
+            <strong>Kindly double-check before submitting!</strong> Once submitted, the form cannot be edited again.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        <button id="write" class="btn btn-success no-print" >Submit Evaluation for Candidate</button>
+        <button type="button" class="btn btn-primary no-print mt-4 mb-4"  onclick="printDiv('printableArea')">Print Form</button>
+    
 
      
   </div>
