--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -1050,7 +1050,7 @@ SIRE/CID experience
                 const evalObject = fetchValues();
               
                 axios.post(`https://nsnemo.com/candidate/evaluation/${sessionStorage.getItem('candidateId')}`, {
-                    eval_type: 'Officers Engine',
+                    eval_type: 'Engine Officers',
                     applied_rank: appliedRank,
                     applied_date: appliedDate,
                     applied_by: decodedToken.userName,
