--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -506,7 +506,7 @@ Type or size of the vessels served    </div>
 Last contract sign off date
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="lastContract" type="text">
+       <input class="form-control" id="lastContractsignOff" type="text">
     </div>
 </div>
 <div class="row ">
@@ -964,7 +964,7 @@ SIRE/CID experience
         'usa', 'medSea', 'farEast', 'pgGoa', 'crewExperienceYes', 'crewExperienceNo', 
         'nationality1', 'cargosHandled', 'automation', 'ceInput1', 'ceInput2', 'ceInput3', 
         'ceInput4', 'ceInput5', 'ceInput6', 'pumps', 'gears', 'drinkingYes', 'drinkingNo', 
-        'medicalYes', 'medicalNo', 'contractsNo', 'vesselServed', 'mainExp', 'auxExp', 
+        'medicalYes', 'medicalNo', 'contractsNo', 'vesselServed','lastContractsignOff', 'mainExp', 'auxExp', 
         'cargoCranes', 'cargoCarried', 'cargoPumps', 'tradingArea', 'mixedCrew', 'ecdis', 
         'psc', 'sire', 'sseYes', 'sseNo', 'ecdisYes', 'ecdisNo', 'anchorYes', 'anchorNo', 
         'deckYes', 'deckNo', 'bridgeYes', 'bridgeNo', 'ballastYes', 'ballastNo', 'mlcYes', 
