--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -506,7 +506,7 @@ Type or size of the vessels served    </div>
 Last contract sign off date
     </div>
     <div class="col border p-2">
-       <input class="form-control" id="lastContract" type="text">
+       <input class="form-control" id="lastContractsignOff" type="text">
     </div>
 </div>
 <div class="row ">
@@ -1027,7 +1027,7 @@ SIRE/CID experience
 
             function fetchValues() {
                 const ids = [
-                'fullName','rankApplied','nationality','telephone','mobile','qualification','lastContract','englishGood','englishSatisf','englishPoor','vessel1','europe','usa','medSea','farEast','pgGoa','crewExperienceYes','crewExperienceNo','nationality1','cargosHandled','automation','ceInput1','ceInput2','ceInput3','ceInput4','ceInput5','ceInput6','pumps','gears','drinkingYes','drinkingNo','medicalYes','medicalNo','contractsNo','vesselServed','lastContract','mainExp','auxExp','cargoCranes','cargoCarried','cargoPumps','tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo','ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo','bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo','pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes','expNo','distressYes','distressNo','dryYes','dryNo','privacyYes','privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo','auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo','cmsYes','cmsNo',',mandatYes','mandatNo','riverYes','riverNo','reasonForLeaving','intComments','accepted','rejected','grading','intName','signature','dateNow'
+                'fullName','rankApplied','nationality','telephone','mobile','qualification','lastContract','englishGood','englishSatisf','englishPoor','vessel1','europe','usa','medSea','farEast','pgGoa','crewExperienceYes','crewExperienceNo','nationality1','cargosHandled','automation','ceInput1','ceInput2','ceInput3','ceInput4','ceInput5','ceInput6','pumps','gears','drinkingYes','drinkingNo','medicalYes','medicalNo','contractsNo','vesselServed','lastContractsignOff','mainExp','auxExp','cargoCranes','cargoCarried','cargoPumps','tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo','ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo','bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo','pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes','expNo','distressYes','distressNo','dryYes','dryNo','privacyYes','privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo','auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo','cmsYes','cmsNo',',mandatYes','mandatNo','riverYes','riverNo','reasonForLeaving','intComments','accepted','rejected','grading','intName','signature','dateNow'
                 ];
 
                 const evalObject = {};
