--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -90,7 +90,7 @@
 
     </style>
 </head>
-  <body class="bg-light">
+  <body class="bg-light" id="evaluationForm">
     <div id="loginModal" class="modal">
       <div class="modal-content">
           <span class="close">&times;</span>
