--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -90,7 +90,8 @@
 
     </style>
 </head>
-  <body class="bg-light" id="evaluationForm">
+  <body class="bg-light" >
+    <form id="evaluationForm"> 
     <div id="loginModal" class="modal">
       <div class="modal-content">
           <span class="close">&times;</span>
@@ -920,6 +921,8 @@ SIRE/CID experience
       </div>
     </div>
     <div>
+
+    </form>
         <div id="submitWarning" class="alert alert-warning alert-dismissible fade show no-print mt-3" role="alert">
             <strong>Kindly double-check before submitting!</strong> Once submitted, the form cannot be edited again.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
