--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -91,6 +91,7 @@
     </style>
 </head>
   <body class="bg-light" >
+    <div id="printableArea">
     <form id="evaluationForm"> 
     <div id="loginModal" class="modal">
       <div class="modal-content">
@@ -923,6 +924,7 @@ SIRE/CID experience
     <div>
 
     </form>
+    </div>
         <div id="submitWarning" class="alert alert-warning alert-dismissible fade show no-print mt-3" role="alert">
             <strong>Kindly double-check before submitting!</strong> Once submitted, the form cannot be edited again.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
