--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -88,6 +88,10 @@
         </style>
     </head>
 <body class="bg-light">
+    <div id="printableArea">
+        <form id="evaluationForm">
+
+      
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -778,15 +782,10 @@
         </form>
     
     </div>
-
+</form>
+</div>
   
-    <div id="submitWarning" class="alert alert-warning alert-dismissible fade show no-print mt-3" role="alert">
-        <strong>Kindly double-check before submitting!</strong> Once submitted, the form cannot be edited again.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-    <button id="write" class="btn btn-success no-print" >Submit Evaluation for Candidate</button>
+ 
     <button type="button" class="btn btn-primary no-print mt-4 mb-4"  onclick="printDiv('printableArea')">Print Form</button>
 
 
