--- a/views/public/html/add-c-evaluation.html
+++ b/views/public/html/add-c-evaluation.html
@@ -638,7 +638,9 @@
                                       <option value="">Select Evaluation Type</option>
                                       <option value="1">OFF 47B ENGINE OFFICERS EVALUATION FORM</option>
                                       <option value="2">OFF 47A DECK OFFICERS EVALUATION FORM</option>
-                                      <option value="3">OFF 47A GALLEY OFFICERS EVALUATION FORM</option>
+                                      <option value="3">OFF 47C EVALUTAION FORM DECK RATINGS</option>
+                                      <option value="4">OFF 47D EVALUATION FORM ENGINE RATINGS</option>
+                                      <option value="5">OFF 47E GALLEY OFFICERS EVALUATION FORM</option>
                                   </select>
                               </div>
                               
