--- a/views/public/html/add-c-evaluation.html
+++ b/views/public/html/add-c-evaluation.html
@@ -622,7 +622,7 @@
                                     <label for="time" class="form-label">Time</label>
                                     <input type="time" class="form-control" id="time" required>
                                 </div>
-
+OFFICERS
                                 <div class="mb-3">
                                   <label for="appliedRank" class="form-label">Applied Rank</label>
                                  
@@ -640,7 +640,7 @@
                                       <option value="2">OFF 47A DECK OFFICERS EVALUATION FORM</option>
                                       <option value="3">OFF 47C EVALUTAION FORM DECK RATINGS</option>
                                       <option value="4">OFF 47D EVALUATION FORM ENGINE RATINGS</option>
-                                      <option value="5">OFF 47E GALLEY OFFICERS EVALUATION FORM</option>
+                                      <option value="5">OFF 47E GALLEY  EVALUATION FORM</option>
                                   </select>
                               </div>
                               
