--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -292,27 +292,27 @@
                 <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
                 <div class="row row-cols-2 g-2">
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput1" value="< 1000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput1" >
                     <label class="form-check-label" for="ceInput1">&lt; 1000</label>
                   </div>
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput2" value="1000 - 3000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput2" >
                     <label class="form-check-label" for="ceInput2">1000 - 3000</label>
                   </div>
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput3" value="3000 - 6000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput3" >
                     <label class="form-check-label" for="ceInput3">3000 - 6000</label>
                   </div>
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput4" value="6000 - 10000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput4">
                     <label class="form-check-label" for="ceInput4">6000 - 10000</label>
                   </div>
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput5" value="10000 - 15000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput5">
                     <label class="form-check-label" for="ceInput5">10000 - 15000</label>
                   </div>
                   <div class="col">
-                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput6" value=">15000">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput6">
                     <label class="form-check-label" for="ceInput6">&gt;15000</label>
                   </div>
                 </div>
