--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -762,7 +762,7 @@
 
               <input
                 type="text"
-                id="intNow"
+                id="intName"
                 class="form-control"
                 placeholder="INTERVIEWER NAME"
               />
